# budgettracker

./: .gitignore  README.md  config.yaml  icon.icns  launch.sh  pyproject.toml  setup.py  start.py
app/: database.py  main.py  models.py
app/routers/: budget_goals.py  categories.py  recurring.py  transactions.py
frontend/: app.js  index.html  style.css
