[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "budgettracker"
version = "0.1.0"
description = "A local budget tracker with web interface"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "sqlalchemy",
    "pyyaml",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]